grammar.js
    source_file: ($) => seq(repeat(choice($._statement, $._blank_line)), optional($._statement_no_nl)),

    _blank_line: () => /\n+/,

    _statement: ($) => seq($._statement_head, /\n/),

    _statement_no_nl: ($) => $._statement_head,

    _simple_statement: ($) =>
      choice(
        $.restore_statement,
        $.purge_statement,
        $.assignment_statement,
        $.directive_statement,
        $.instruction_statement,
      ),

    labeled_statement: ($) =>
      prec.right(seq(
        $.label_definition,
        optional($._simple_statement),
      )),

    block_body: ($) =>
      prec.right(
        repeat1(
          choice(
            $._statement,
            $._blank_line,
          ),
        ),
      ),

    // Macro/struc bodies can contain `end X` clauses (e.g. `end namespace`)
    // that don't close a block opened in the body — they're emitted into
    // the caller's scope. The external scanner emits these as opaque
    // `free_end_clause` tokens only when `end` isn't followed by a closer
    // keyword (`macro`/`struc`/`calminstruction`), so the structured
    // grammar still sees its own closer correctly.
    //
    // The DUAL case — an opener whose closer is emitted by a peer macro
    // (idiomatic `macro NAME` / `macro end?.NAME?!` pair) — is handled by
    // `free_begin_clause`. When a `namespace X` (or `if`, `while`, etc.)
    // appears without its `end X` in the same body, the structured block
    // rule can't complete; free_begin_clause wins only in that case
    // because it's at lower precedence than the full block.
    free_begin_clause: ($) =>
      prec.dynamic(-1, seq(
        choice(
          seq(keywordToken("namespace"), optional(field("arguments", $.argument_list))),
          seq(keywordToken("if"), field("condition", $.argument_list)),
          seq(keywordToken("while"), optional(field("condition", $.argument_list))),
          seq(keywordToken("iterate"), optional(field("arguments", $.argument_list))),
          seq(choice(keywordToken("repeat"), keywordToken("rept")), optional(field("arguments", $.argument_list))),
          seq(choice(keywordToken("match"), keywordToken("rawmatch"), keywordToken("rmatch")), field("pattern", $.match_pattern)),
          seq(keywordToken("virtual"), optional(field("arguments", $.argument_list))),
          seq(keywordToken("postpone"), optional(field("arguments", $.argument_list))),
          seq(choice(keywordToken("irp"), keywordToken("irpv")), optional(field("arguments", $.argument_list))),
        ),
        /\n/,
      )),

    line_continuation: () => token(seq("\\", /[ \t]*\r?\n/)),

    identifier: () =>
      token(
        prec(
          -1,
          /[^\s+\-/*=<>()\[\]{}:!,|&~`;\\#]+/,
        ),
      ),

    placeholder_name: () => token(/\?+/),

    symbol_name: ($) =>
      prec.right(
        seq(
          choice($.identifier, $.placeholder_name),
          repeat(seq("#", choice($.identifier, $.placeholder_name))),
        ),
      ),

    string_literal: () =>
      token(
        prec(
          2,
        choice(
          /'([^'\n]|'')*'/,
          /"([^"\n]|"")*"/,
        ),
        ),
      ),

    number_literal: () => token(prec(2, choice(...NUMBER_PATTERNS))),

    label_definition: ($) =>
      seq(
        field("name", $.symbol_name),
        field("operator", choice(token.immediate("::"), token.immediate(":"))),
      ),

    parameter_list: ($) => prec.right(seq($.parameter, repeat(seq(",", $.parameter)), optional(","))),

    parameter: ($) =>
      seq(
        optional("&"),
        field("name", $.symbol_name),
        repeat(choice("?", "*", "&")),
        optional(seq(":", field("default", $.argument))),
      ),

    name_list: ($) => prec.right(seq($.symbol_name, repeat(seq(",", $.symbol_name)), optional(","))),

    argument_list: ($) => prec.right(seq($.argument, repeat(seq(",", $.argument)), optional(","))),

    argument: ($) =>
      choice(
        $.angled_argument,
        prec.right(repeat1($.argument_atom)),
      ),

    instruction_argument_list: ($) =>
      prec.right(seq(
        $.instruction_argument,
        repeat(seq(",", optional($.argument))),
      )),

    instruction_argument: ($) =>
      choice(
        $.angled_argument,
        prec.right(
          seq(
            $.instruction_argument_head,
            repeat($.argument_atom),
          ),
        ),
      ),

    instruction_argument_head: ($) =>
      choice(
        $.number_literal,
        $.string_literal,
        $.built_in_symbol,
        $.sigil_token,
        $.word_operator,
        $.operator_token,
        $.identifier,
        $.parenthesized_argument,
        $.bracketed_argument,
        $.braced_argument,
      ),

    argument_atom: ($) =>
      choice(
        $.number_literal,
        $.string_literal,
        $.built_in_symbol,
        $.sigil_token,
        $.word_operator,
        $.identifier,
        $.operator_token,
        $.parenthesized_argument,
        $.bracketed_argument,
        $.braced_argument,
        $.stray_bracket,
      ),

    // fasmg's syntactical_characters (`[`/`]`/`(`/`)`/`{`/`}`) terminate
    // a token but do NOT need to balance at parse time. A stray bracket
    // (e.g., `dtail]` inside a match body where the opener lives in the
    // peer match pattern, or `current equ (` where the closer appears
    // in a later line of the peer match arm) is valid fasmg — the
    // assembler still reads tokens correctly. We accept it here as a
    // low-dynamic-precedence atom so that structured
    // `[ ... ]`/`( ... )`/`{ ... }` still wins when both halves live
    // in the same argument list.
    stray_bracket: () =>
      prec.dynamic(-10, token(choice("]", ")", "}"))),

    sigil_token: () =>
      token(
        prec(
          3,
          choice(
            /=:[^\s,)\]}>]+/,
            /=[A-Za-z_.?$%][^\s,()\[\]{}<>]*/,
            /`[^\s,()\[\]{}<>]+/,
            /:[A-Za-z_.?$%][^\s,()\[\]{}<>]*/,
          ),
        ),
      ),

    word_operator: () => prec.right(choice(...WORD_OPERATOR_KEYWORDS.map((keyword) => keywordRule(keyword)))),

    operator_token: () =>
      token(
        prec(
          -1,
          choice(
            ":==",
            "<>",
            "<=",
            ">=",
            "<<",
            ">>",
            "+",
            "-",
            "*",
            "/",
            "=",
            "<",
            ">",
            "&",
            "|",
            "~",
            "!",
            "?",
            ".",
            ":",
            "#",
          ),
        ),
      ),

    angled_argument: ($) =>
      prec(
        2,
        seq(
          "<",
          repeat(choice($.line_continuation, $.angled_text_fragment)),
          ">",
        ),
      ),

    angled_text_fragment: () => token(prec(1, /[^>\r\n\\]+/)),

    parenthesized_argument: ($) => seq("(", optional($.argument_list), ")"),

    bracketed_argument: ($) => seq("[", optional($.argument_list), "]"),

    match_pattern: ($) => choice($.argument_list, $.match_pattern_text),

    assignment_statement: ($) =>
      prec.right(2,
        seq(
        field("name", $.identifier),
        field("operator", choice("=", ":=", "=:", "equ", "reequ", "define", "redefine")),
        optional(field("value", $.argument_list)),
        ),
      ),

    restore_statement: ($) => seq(keywordToken("restore"), field("names", $.name_list)),

    purge_statement: ($) => seq(keywordToken("purge"), field("names", $.name_list)),

    match_statement: ($) =>
      seq(
        choice(keywordToken("match"), keywordToken("rawmatch"), keywordToken("rmatch")),
        field("pattern", $.match_pattern),
      ),

    directive_keyword: () => prec.right(choice(...DIRECTIVE_KEYWORDS.map((keyword) => keywordRule(keyword)))),

    directive_statement: ($) =>
      prec.right(
        seq(
        field("keyword", $.directive_keyword),
        optional(field("arguments", $.argument_list)),
        ),
      ),

    instruction_statement: ($) =>
      prec.right(-1,
        choice(
          seq(
            field("name", $.symbol_name),
            field("arguments", $.comma_prefixed_argument_list),
          ),
          seq(
            field("name", $.symbol_name),
            optional(field("arguments", $.instruction_argument_list)),
          ),
        ),
      ),

    macro_definition: ($) =>
      seq(
        keywordToken("macro"),
        optional("!"),
        field("name", $.symbol_name),
        repeat(field("decorator", choice(":", "!"))),
        optional(field("parameters", $.parameter_list)),
        repeat(field("decorator", choice(":", "!"))),
        /\n/,
        optional(field("body", alias($.permissive_block_body, $.block_body))),
        field("end", ciPhrase("end macro")),
      ),

    struc_definition: ($) =>
      seq(
        keywordToken("struc"),
        optional("!"),
        choice(
          seq(
            field("target", $.calm_target),
            field("name", $.symbol_name),
          ),
          field("name", $.symbol_name),
        ),
        repeat(field("decorator", choice(":", "!"))),
        optional(field("parameters", $.parameter_list)),
        repeat(field("decorator", choice(":", "!"))),
        /\n/,
        optional(field("body", alias($.permissive_block_body, $.block_body))),
        field("end", ciPhrase("end struc")),
      ),

    calminstruction_definition: ($) =>
      seq(
        keywordToken("calminstruction"),
        optional("!"),
        choice(
          seq(
            field("target", $.calm_target),
            field("name", $.symbol_name),
          ),
          field("name", $.symbol_name),
        ),
        repeat(field("decorator", choice(":", "!"))),
        optional(field("parameters", $.parameter_list)),
        repeat(field("decorator", choice(":", "!"))),
        /\n/,
        optional(field("body", $.calm_block_body)),
        field("end", ciPhrase("end calminstruction")),
      ),

    calm_target: ($) => seq("(", optional("&"), $.identifier, ")"),

    calm_block_body: ($) =>
      prec.right(
        repeat1(
          choice(
            $.calm_statement,
            $._blank_line,
          ),
        ),
      ),

    calm_statement: ($) =>
      seq(
        choice(
          $.labeled_calm_statement,
          $.calm_simple_statement,
        ),
        /\n/,
      ),

    labeled_calm_statement: ($) =>
      prec.right(
        seq(
          $.label_definition,
          optional($.calm_simple_statement),
        ),
      ),

    calm_simple_statement: ($) =>
      choice(
        $.asm_statement,
        $.match_statement,
        $.restore_statement,
        $.purge_statement,
        $.assignment_statement,
        $.directive_statement,
        $.instruction_statement,
      ),

    if_block: ($) =>
      seq(
        keywordToken("if"),
        field("condition", $.argument_list),
        /\n/,
        field("body", $.block_body),
        repeat(field("else_if_clauses", $.else_if_clause)),
        optional(field("else_clause", $.else_clause)),
        field("end", ciPhrase("end if")),
      ),

    else_if_clause: ($) =>
      seq(
        keywordToken("else"),
        keywordToken("if"),
        field("condition", $.argument_list),
        /\n/,
        field("body", $.block_body),
      ),

    else_clause: ($) =>
      seq(
        keywordToken("else"),
        /\n/,
        field("body", $.block_body),
      ),

    iterate_block: ($) =>
      seq(
        keywordToken("iterate"),
        optional(field("arguments", $.argument_list)),
        /\n/,
        field("body", $.block_body),
        field("end", ciPhrase("end iterate")),
      ),

    namespace_block: ($) =>
      seq(
        keywordToken("namespace"),
        optional(field("arguments", $.argument_list)),
        /\n/,
        field("body", $.block_body),
        field("end", ciPhrase("end namespace")),
      ),

    match_block: ($) =>
      seq(
        choice(keywordToken("match"), keywordToken("rawmatch"), keywordToken("rmatch")),
        optional(field("pattern", $.match_pattern)),
        /\n/,
        field("body", $.block_body),
        repeat(field("else_match_clauses", $.else_match_clause)),
        optional(field("else_clause", $.else_clause)),
        field("end", ciPhrase("end match")),
      ),
